# models/admin.js
@@ -1,0 +1,8 @@
+const User = require("./user");
+
+module.exports = class Admin extends User {
+    constructor(id, username, fullname, email, phoneNumber, address, password){
+        super(id, username, fullname, email, phoneNumber, address, password);
+        this.isAdmin = true;
+    }
+}
